deploy: d8ae85bc8bf5322f4bbad09435a1626a9a6c040c

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "79519247",
+   "id": "ece0d8cd",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a953da6",
+   "id": "0eea19ad",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5354a13",
+   "id": "2f540b98",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d84c28f8",
+   "id": "a6ac0cff",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c868161",
+   "id": "42a26976",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "328adfeb",
+   "id": "93d10f9c",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e5a7a85d",
+   "id": "1ff04995",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-16T15:05:15.758352Z",
-     "iopub.status.busy": "2024-08-16T15:05:15.758156Z",
-     "iopub.status.idle": "2024-08-16T15:05:20.475781Z",
-     "shell.execute_reply": "2024-08-16T15:05:20.475147Z"
+     "iopub.execute_input": "2024-09-06T08:21:34.167532Z",
+     "iopub.status.busy": "2024-09-06T08:21:34.167341Z",
+     "iopub.status.idle": "2024-09-06T08:21:38.362543Z",
+     "shell.execute_reply": "2024-09-06T08:21:38.361950Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ccb49c9",
+   "id": "a9bfa1ac",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "353b557c",
+   "id": "422de755",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bfe394b",
+   "id": "e0a07a46",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a219d5b",
+   "id": "02541640",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7de63fef",
+   "id": "383db3e5",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54c567ae",
+   "id": "d5983bc9",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8993c8af",
+   "id": "2c30b025",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7abaa94",
+   "id": "ae4ef6c4",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1c4b2288",
+   "id": "5bc184c4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-16T15:05:20.478828Z",
-     "iopub.status.busy": "2024-08-16T15:05:20.478309Z",
-     "iopub.status.idle": "2024-08-16T15:05:22.603377Z",
-     "shell.execute_reply": "2024-08-16T15:05:22.602764Z"
+     "iopub.execute_input": "2024-09-06T08:21:38.365348Z",
+     "iopub.status.busy": "2024-09-06T08:21:38.364959Z",
+     "iopub.status.idle": "2024-09-06T08:21:40.207900Z",
+     "shell.execute_reply": "2024-09-06T08:21:40.207305Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a43da7f",
+   "id": "ab186b52",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "15a51c58",
+   "id": "510c0f4d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-16T15:05:22.606006Z",
-     "iopub.status.busy": "2024-08-16T15:05:22.605614Z",
-     "iopub.status.idle": "2024-08-16T15:05:22.609423Z",
-     "shell.execute_reply": "2024-08-16T15:05:22.608624Z"
+     "iopub.execute_input": "2024-09-06T08:21:40.210381Z",
+     "iopub.status.busy": "2024-09-06T08:21:40.209923Z",
+     "iopub.status.idle": "2024-09-06T08:21:40.213496Z",
+     "shell.execute_reply": "2024-09-06T08:21:40.212888Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a9b4373",
+   "id": "f6ee82ba",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ec0f746",
+   "id": "bdcad8ee",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0622fd09",
+   "id": "9c436898",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88500046",
+   "id": "0125a4e1",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b2ed1272",
+   "id": "c9a9794c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-16T15:05:22.611866Z",
-     "iopub.status.busy": "2024-08-16T15:05:22.611512Z",
-     "iopub.status.idle": "2024-08-16T15:05:22.658550Z",
-     "shell.execute_reply": "2024-08-16T15:05:22.657916Z"
+     "iopub.execute_input": "2024-09-06T08:21:40.215796Z",
+     "iopub.status.busy": "2024-09-06T08:21:40.215479Z",
+     "iopub.status.idle": "2024-09-06T08:21:40.258981Z",
+     "shell.execute_reply": "2024-09-06T08:21:40.258379Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0df70f74",
+   "id": "96b450a7",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c075c898",
+   "id": "410e9a05",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-16T15:05:22.661228Z",
-     "iopub.status.busy": "2024-08-16T15:05:22.660835Z",
-     "iopub.status.idle": "2024-08-16T15:05:22.735515Z",
-     "shell.execute_reply": "2024-08-16T15:05:22.734877Z"
+     "iopub.execute_input": "2024-09-06T08:21:40.261368Z",
+     "iopub.status.busy": "2024-09-06T08:21:40.261026Z",
+     "iopub.status.idle": "2024-09-06T08:21:40.326890Z",
+     "shell.execute_reply": "2024-09-06T08:21:40.326275Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41f62a8a",
+   "id": "11b0bc38",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c39edbd1",
+   "id": "8f2eb7dd",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "df7c596e",
+   "id": "b3f35040",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-16T15:05:22.738192Z",
-     "iopub.status.busy": "2024-08-16T15:05:22.737836Z",
-     "iopub.status.idle": "2024-08-16T15:05:22.770729Z",
-     "shell.execute_reply": "2024-08-16T15:05:22.770096Z"
+     "iopub.execute_input": "2024-09-06T08:21:40.329468Z",
+     "iopub.status.busy": "2024-09-06T08:21:40.329105Z",
+     "iopub.status.idle": "2024-09-06T08:21:40.358001Z",
+     "shell.execute_reply": "2024-09-06T08:21:40.357500Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0bed2a2",
+   "id": "aaafb088",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb809ac7",
+   "id": "9af04a3e",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81f2cfb4",
+   "id": "470a1c96",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3afc964",
+   "id": "6bd7565d",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ab7083b",
+   "id": "4a1145e2",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c1e3f59d",
+   "id": "05f38d9b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-16T15:05:22.773167Z",
-     "iopub.status.busy": "2024-08-16T15:05:22.772902Z",
-     "iopub.status.idle": "2024-08-16T15:05:22.777303Z",
-     "shell.execute_reply": "2024-08-16T15:05:22.776683Z"
+     "iopub.execute_input": "2024-09-06T08:21:40.360547Z",
+     "iopub.status.busy": "2024-09-06T08:21:40.360221Z",
+     "iopub.status.idle": "2024-09-06T08:21:40.364580Z",
+     "shell.execute_reply": "2024-09-06T08:21:40.363946Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36e5d493",
+   "id": "d9d616af",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3c9e9534",
+   "id": "4a82de6e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-16T15:05:22.779468Z",
-     "iopub.status.busy": "2024-08-16T15:05:22.779141Z",
-     "iopub.status.idle": "2024-08-16T15:05:22.782196Z",
-     "shell.execute_reply": "2024-08-16T15:05:22.781520Z"
+     "iopub.execute_input": "2024-09-06T08:21:40.366864Z",
+     "iopub.status.busy": "2024-09-06T08:21:40.366500Z",
+     "iopub.status.idle": "2024-09-06T08:21:40.369439Z",
+     "shell.execute_reply": "2024-09-06T08:21:40.368944Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a788367e",
+   "id": "ab29b26f",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2c90a60c",
+   "id": "253dd0fa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-16T15:05:22.784718Z",
-     "iopub.status.busy": "2024-08-16T15:05:22.784199Z",
-     "iopub.status.idle": "2024-08-16T15:05:25.423143Z",
-     "shell.execute_reply": "2024-08-16T15:05:25.422500Z"
+     "iopub.execute_input": "2024-09-06T08:21:40.371735Z",
+     "iopub.status.busy": "2024-09-06T08:21:40.371386Z",
+     "iopub.status.idle": "2024-09-06T08:21:42.946556Z",
+     "shell.execute_reply": "2024-09-06T08:21:42.945970Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "641291b1",
+   "id": "18e9d944",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4087334",
+   "id": "04fa30b5",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87e902be",
+   "id": "04139bc6",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9afe7c0c",
+   "id": "617b0b88",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0cfc6fa7",
+   "id": "ae0c6aa2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-16T15:05:25.425967Z",
-     "iopub.status.busy": "2024-08-16T15:05:25.425576Z",
-     "iopub.status.idle": "2024-08-16T15:05:25.429789Z",
-     "shell.execute_reply": "2024-08-16T15:05:25.429177Z"
+     "iopub.execute_input": "2024-09-06T08:21:42.949285Z",
+     "iopub.status.busy": "2024-09-06T08:21:42.948789Z",
+     "iopub.status.idle": "2024-09-06T08:21:42.952545Z",
+     "shell.execute_reply": "2024-09-06T08:21:42.951928Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f5dc8e84900>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f6ed5530cc0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9e87a88",
+   "id": "e62aaf5c",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e8844e7",
+   "id": "14e91920",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "528b68f0",
+   "id": "c16a87a7",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bfe1d51",
+   "id": "6f57b5aa",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "59f9fbb0",
+   "id": "a9f5daaa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-16T15:05:25.432370Z",
-     "iopub.status.busy": "2024-08-16T15:05:25.431959Z",
-     "iopub.status.idle": "2024-08-16T15:05:25.435495Z",
-     "shell.execute_reply": "2024-08-16T15:05:25.434779Z"
+     "iopub.execute_input": "2024-09-06T08:21:42.954863Z",
+     "iopub.status.busy": "2024-09-06T08:21:42.954479Z",
+     "iopub.status.idle": "2024-09-06T08:21:42.957654Z",
+     "shell.execute_reply": "2024-09-06T08:21:42.957115Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e1d3589f",
+   "id": "19c9bb28",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-08-16T15:05:25.437966Z",
-     "iopub.status.busy": "2024-08-16T15:05:25.437572Z",
-     "iopub.status.idle": "2024-08-16T15:05:26.561720Z",
-     "shell.execute_reply": "2024-08-16T15:05:26.561063Z"
+     "iopub.execute_input": "2024-09-06T08:21:42.959946Z",
+     "iopub.status.busy": "2024-09-06T08:21:42.959627Z",
+     "iopub.status.idle": "2024-09-06T08:21:44.038451Z",
+     "shell.execute_reply": "2024-09-06T08:21:44.037900Z"
     }
    },
    "outputs": [
@@ -671,7 +671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
