deploy: 0008ce27adeea1ef2e434b18098a2745c60bb68e

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6cd23cb1",
+   "id": "1462ede0",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cee25606",
+   "id": "4819bb3a",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59f77f0e",
+   "id": "4e4e6cae",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d060d471",
+   "id": "d74748fd",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1892f764",
+   "id": "73402fc1",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ac0ac0e",
+   "id": "a12cbae1",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d482f5cc",
+   "id": "480a471a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-06T08:52:50.353225Z",
-     "iopub.status.busy": "2024-09-06T08:52:50.352776Z",
-     "iopub.status.idle": "2024-09-06T08:52:54.622156Z",
-     "shell.execute_reply": "2024-09-06T08:52:54.621602Z"
+     "iopub.execute_input": "2024-09-20T07:57:03.955807Z",
+     "iopub.status.busy": "2024-09-20T07:57:03.955610Z",
+     "iopub.status.idle": "2024-09-20T07:57:08.778433Z",
+     "shell.execute_reply": "2024-09-20T07:57:08.777847Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "681eb6ea",
+   "id": "2d8573c5",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a587b59c",
+   "id": "dbac4d93",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6ade458",
+   "id": "f00907b9",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8103b1af",
+   "id": "d626af2a",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "580620da",
+   "id": "b208beef",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "457960eb",
+   "id": "376bed27",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "015a84a2",
+   "id": "bc26d641",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38287c30",
+   "id": "45dae799",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "26f8967e",
+   "id": "3b1462ea",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-06T08:52:54.624841Z",
-     "iopub.status.busy": "2024-09-06T08:52:54.624390Z",
-     "iopub.status.idle": "2024-09-06T08:52:56.523029Z",
-     "shell.execute_reply": "2024-09-06T08:52:56.522429Z"
+     "iopub.execute_input": "2024-09-20T07:57:08.781170Z",
+     "iopub.status.busy": "2024-09-20T07:57:08.780475Z",
+     "iopub.status.idle": "2024-09-20T07:57:10.887320Z",
+     "shell.execute_reply": "2024-09-20T07:57:10.886615Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35c4bd9e",
+   "id": "1aa5e2e4",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0a9a2b8e",
+   "id": "8f34a228",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-06T08:52:56.525601Z",
-     "iopub.status.busy": "2024-09-06T08:52:56.525200Z",
-     "iopub.status.idle": "2024-09-06T08:52:56.528824Z",
-     "shell.execute_reply": "2024-09-06T08:52:56.528134Z"
+     "iopub.execute_input": "2024-09-20T07:57:10.889531Z",
+     "iopub.status.busy": "2024-09-20T07:57:10.889124Z",
+     "iopub.status.idle": "2024-09-20T07:57:10.892951Z",
+     "shell.execute_reply": "2024-09-20T07:57:10.892284Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e376a039",
+   "id": "5b86ee3d",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7ccf40c",
+   "id": "ad90ea6e",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bb8a480",
+   "id": "91c09a9f",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f045664b",
+   "id": "d69c5039",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2bd1713b",
+   "id": "2c1b3ecc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-06T08:52:56.531146Z",
-     "iopub.status.busy": "2024-09-06T08:52:56.530787Z",
-     "iopub.status.idle": "2024-09-06T08:52:56.575230Z",
-     "shell.execute_reply": "2024-09-06T08:52:56.574650Z"
+     "iopub.execute_input": "2024-09-20T07:57:10.895070Z",
+     "iopub.status.busy": "2024-09-20T07:57:10.894690Z",
+     "iopub.status.idle": "2024-09-20T07:57:10.942532Z",
+     "shell.execute_reply": "2024-09-20T07:57:10.941960Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a9413f0",
+   "id": "6c855d3f",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0a471cca",
+   "id": "c5118266",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-06T08:52:56.577736Z",
-     "iopub.status.busy": "2024-09-06T08:52:56.577311Z",
-     "iopub.status.idle": "2024-09-06T08:52:56.643918Z",
-     "shell.execute_reply": "2024-09-06T08:52:56.643312Z"
+     "iopub.execute_input": "2024-09-20T07:57:10.944645Z",
+     "iopub.status.busy": "2024-09-20T07:57:10.944257Z",
+     "iopub.status.idle": "2024-09-20T07:57:11.019880Z",
+     "shell.execute_reply": "2024-09-20T07:57:11.019248Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f21a566d",
+   "id": "8d45051a",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2e36dfe",
+   "id": "1dd98518",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "577b3dc6",
+   "id": "972c3ae9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-06T08:52:56.646285Z",
-     "iopub.status.busy": "2024-09-06T08:52:56.646087Z",
-     "iopub.status.idle": "2024-09-06T08:52:56.675586Z",
-     "shell.execute_reply": "2024-09-06T08:52:56.674995Z"
+     "iopub.execute_input": "2024-09-20T07:57:11.022395Z",
+     "iopub.status.busy": "2024-09-20T07:57:11.021821Z",
+     "iopub.status.idle": "2024-09-20T07:57:11.055319Z",
+     "shell.execute_reply": "2024-09-20T07:57:11.054695Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "310faf36",
+   "id": "98451c98",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a90d109",
+   "id": "df24e440",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f7bdae5",
+   "id": "2b301242",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "703774c1",
+   "id": "5253e5b4",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08283ece",
+   "id": "585ee025",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fab66b85",
+   "id": "390519ae",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-06T08:52:56.678238Z",
-     "iopub.status.busy": "2024-09-06T08:52:56.677866Z",
-     "iopub.status.idle": "2024-09-06T08:52:56.682180Z",
-     "shell.execute_reply": "2024-09-06T08:52:56.681704Z"
+     "iopub.execute_input": "2024-09-20T07:57:11.057436Z",
+     "iopub.status.busy": "2024-09-20T07:57:11.057233Z",
+     "iopub.status.idle": "2024-09-20T07:57:11.061629Z",
+     "shell.execute_reply": "2024-09-20T07:57:11.061135Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8df8009",
+   "id": "049a86c1",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c9974dd1",
+   "id": "cadfba68",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-06T08:52:56.684297Z",
-     "iopub.status.busy": "2024-09-06T08:52:56.684010Z",
-     "iopub.status.idle": "2024-09-06T08:52:56.687134Z",
-     "shell.execute_reply": "2024-09-06T08:52:56.686505Z"
+     "iopub.execute_input": "2024-09-20T07:57:11.063385Z",
+     "iopub.status.busy": "2024-09-20T07:57:11.063210Z",
+     "iopub.status.idle": "2024-09-20T07:57:11.066365Z",
+     "shell.execute_reply": "2024-09-20T07:57:11.065612Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c060633",
+   "id": "71cb995c",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fca65d49",
+   "id": "c8f48079",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-06T08:52:56.689521Z",
-     "iopub.status.busy": "2024-09-06T08:52:56.689144Z",
-     "iopub.status.idle": "2024-09-06T08:52:59.280057Z",
-     "shell.execute_reply": "2024-09-06T08:52:59.279449Z"
+     "iopub.execute_input": "2024-09-20T07:57:11.068342Z",
+     "iopub.status.busy": "2024-09-20T07:57:11.067941Z",
+     "iopub.status.idle": "2024-09-20T07:57:13.766816Z",
+     "shell.execute_reply": "2024-09-20T07:57:13.766151Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f2c92ef",
+   "id": "ba56789f",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecdf2b1f",
+   "id": "2a013d12",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8512406",
+   "id": "474575cd",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af3e4c1a",
+   "id": "e3b56933",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ea6dcb7e",
+   "id": "ccf71a75",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-06T08:52:59.282792Z",
-     "iopub.status.busy": "2024-09-06T08:52:59.282407Z",
-     "iopub.status.idle": "2024-09-06T08:52:59.286135Z",
-     "shell.execute_reply": "2024-09-06T08:52:59.285545Z"
+     "iopub.execute_input": "2024-09-20T07:57:13.769261Z",
+     "iopub.status.busy": "2024-09-20T07:57:13.768574Z",
+     "iopub.status.idle": "2024-09-20T07:57:13.772684Z",
+     "shell.execute_reply": "2024-09-20T07:57:13.772069Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fb878ec8d60>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7ff53ed01d00>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "475bf982",
+   "id": "79bdf61b",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9b9e50e",
+   "id": "1cf128f4",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "456ad846",
+   "id": "bf7bf22b",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7750ba84",
+   "id": "ffe73d33",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b97f7b18",
+   "id": "e2bde0a8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-06T08:52:59.288680Z",
-     "iopub.status.busy": "2024-09-06T08:52:59.288278Z",
-     "iopub.status.idle": "2024-09-06T08:52:59.291613Z",
-     "shell.execute_reply": "2024-09-06T08:52:59.291114Z"
+     "iopub.execute_input": "2024-09-20T07:57:13.774921Z",
+     "iopub.status.busy": "2024-09-20T07:57:13.774549Z",
+     "iopub.status.idle": "2024-09-20T07:57:13.777811Z",
+     "shell.execute_reply": "2024-09-20T07:57:13.777225Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "973bd7b4",
+   "id": "135503fa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-06T08:52:59.293759Z",
-     "iopub.status.busy": "2024-09-06T08:52:59.293384Z",
-     "iopub.status.idle": "2024-09-06T08:53:00.373273Z",
-     "shell.execute_reply": "2024-09-06T08:53:00.372658Z"
+     "iopub.execute_input": "2024-09-20T07:57:13.779575Z",
+     "iopub.status.busy": "2024-09-20T07:57:13.779243Z",
+     "iopub.status.idle": "2024-09-20T07:57:14.888725Z",
+     "shell.execute_reply": "2024-09-20T07:57:14.888189Z"
     }
    },
    "outputs": [
@@ -671,7 +671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
